--- a/templates/template-RockOut-newAct.htm
+++ b/templates/template-RockOut-newAct.htm
@@ -47,6 +47,9 @@ As we all adapt to working from home, digital learning and social distancing, we
 </table>
 </p>
 
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/AsytxrtOR5s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <p>
 <b>Ronald Coe, Jr.</b> |  Mid-Atlantic Sr. Systems Engineer Enterprise  |  <b>Nutanix</b>
 Phone: (301) 332-0488 |  <a href="mailto: ronald.coejr@nutanix.com">ronald.coejr@nutanix.com</a>  | <a href="https://twitter.com/roncoejr">@roncoejr</a> |
