--- a/templates/template-RockOut-newAct.htm
+++ b/templates/template-RockOut-newAct.htm
@@ -2,6 +2,7 @@
 <html>
 <head>
     <style>
+	img { max-width: 15%; height: 5%; };
         table {};
         tr {};
         td {};
@@ -54,6 +55,7 @@ As we all adapt to working from home, digital learning and social distancing, we
 </table>
 </p>
 
+<img href="https://www.nutanix.com/content/dam/nutanix/images/work-from-home/img-hp-banner-euc.jpg">
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/AsytxrtOR5s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
