tweak some html

--- a/templates/template-RockOut-newAct.htm
+++ b/templates/template-RockOut-newAct.htm
@@ -58,7 +58,8 @@ As we all adapt to working from home, digital learning and social distancing, we
 <iframe width="560" height="315" src="https://www.youtube.com/embed/AsytxrtOR5s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <p>
-<b>Ronald Coe, Jr.</b> |  Mid-Atlantic Sr. Systems Engineer Enterprise  |  <b>Nutanix</b>
+<b>Ronald Coe, Jr.</b> |  Mid-Atlantic Sr. Systems Engineer Enterprise  |  <b>Nutanix</b><br>
+<img href="https://i.imgur.com/vBXOEDS.png">
 Phone: (301) 332-0488 |  <a href="mailto: ronald.coejr@nutanix.com">ronald.coejr@nutanix.com</a>  | <a href="https://twitter.com/roncoejr">@roncoejr</a> |
 </p>
 
